config and run rubocop

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -5,50 +5,44 @@ require:
   - rubocop-sorbet
   - rubocop-minitest
   - rubocop-rake
-  - ./lib/rubocop/cop/ruby_lsp/use_language_server_aliases
-  - ./lib/rubocop/cop/ruby_lsp/use_register_with_handler_method
+  # - ./lib/rubocop/cop/ruby_lsp/use_language_server_aliases
+  # - ./lib/rubocop/cop/ruby_lsp/use_register_with_handler_method
 
 AllCops:
   NewCops: disable
   SuggestExtensions: false
-  TargetRubyVersion: 3.0
-  Exclude:
-    - "vendor/**/*"
-    - "features/**/*"
-    - "test/fixtures/**/*"
-    - "test/expectations/**/*"
+  TargetRubyVersion: 3.2
+  # Exclude:
+  #   - "vendor/**/*"
+  #   - "features/**/*"
+    # - "test/fixtures/**/*"
+    # - "test/expectations/**/*"
 
 Naming/FileName:
-  Exclude:
-    - "lib/ruby-lsp.rb"
-
-RubyLsp/UseLanguageServerAliases:
-  Exclude:
-    - "test/**/*.rb"
-
-Sorbet/FalseSigil:
-  Enabled: false
-
-Sorbet/TrueSigil:
   Enabled: true
-  Include:
-    - "test/**/*.rb"
-    - "lib/ruby_indexer/test/**/*.rb"
-    - "lib/ruby_indexer/lib/ruby_indexer/prefix_tree.rb"
-  Exclude:
-    - "**/*.rake"
-    - "lib/**/*.rb"
 
-Sorbet/StrictSigil:
-  Enabled: true
-  Include:
-    - "lib/**/*.rb"
-  Exclude:
-    - "**/*.rake"
-    - "test/**/*.rb"
-    - "lib/ruby_indexer/test/**/*.rb"
-    - "lib/ruby-lsp.rb"
-    - "lib/ruby_indexer/lib/ruby_indexer/prefix_tree.rb"
+# RubyLsp/UseLanguageServerAliases:
+#   Exclude:
+#     - "test/**/*.rb"
+
+# Sorbet/FalseSigil:
+#   Enabled: false
+
+# Sorbet/TrueSigil:
+#   Enabled: true
+#   Include:
+#     - "test/**/*.rb"
+#   Exclude:
+#     - "**/*.rake"
+#     - "lib/**/*.rb"
+
+# Sorbet/StrictSigil:
+#   Enabled: true
+#   Include:
+#     - "lib/**/*.rb"
+#   Exclude:
+#     - "**/*.rake"
+#     - "test/**/*.rb"
 
 Style/StderrPuts:
   Enabled: true
