Add homebrew and rubyfmt set up to CI script

--- a/.github/workflows/ruby.yml
+++ b/.github/workflows/ruby.yml
@@ -34,5 +34,9 @@ jobs:
       with:
         ruby-version: ${{ matrix.ruby-version }}
         bundler-cache: true # runs 'bundle install' and caches installed gems automatically
+    - name: Set up Homebrew
+      run: /bin/bash -c "$(curl -fsSL https://raw.githubusercontent.com/Homebrew/install/HEAD/install.sh)"
+    - name: Set up rubyfmt
+      run: brew install rubyfmt
     - name: Run tests
       run: bundle exec rake test
